--- a/templates/index.html
+++ b/templates/index.html
@@ -89,8 +89,8 @@
         <ul class="flex justify-between items-center">
             
             <li>&copy; 2021</li>
-            <li> Made with Django and Tailwind</li>
-            <li>By OtchereDev</li>
+            <li> power by django</li>
+            <li>By victor smart</li>
         </ul>
     </footer>
 
